# unity_unit_test_fw

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cicd.yml
core_logic/inc/: math_logic.h
core_logic/src/: math_logic.c
unit_test/src/: test_math_logic.c  test_runner_math_logic.c
